--- a/docs/docs-ref-autogen/excel/excel.showasrule.yml
+++ b/docs/docs-ref-autogen/excel/excel.showasrule.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3ed202b6ea7cd7518dc02eae53d215411614d1b5
-ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
+ms.openlocfilehash: 34c0a1d4e587bad963f6869851dc1be67d38fad8
+ms.sourcegitcommit: 9034a7d2fb2934046178915d4305b0f0cf8f7934
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "25591167"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "25798206"
 items:
 - uid: excel.Excel.ShowAsRule
   summary: '\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
@@ -50,6 +50,7 @@ items:
     return:
       type:
       - excel.Excel.PivotItem
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const pivotTable = context.workbook.worksheets.getActiveWorksheet().pivotTables.getItem(\"Farm Sales\");\n    const farmDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold at Farm\");\n    const wholesaleDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold Wholesale\");\n\n    farmDataHierarchy.load(\"showAs\");\n    wholesaleDataHierarchy.load(\"showAs\");\n    await context.sync();\n\n    // show the difference between crate sales of the \"A Farms\" and the other farms\n    // this difference is both aggregated and shown for individual fruit types (where applicable)\n    let farmShowAs = farmDataHierarchy.showAs;\n    farmShowAs.calculation = Excel.ShowAsCalculation.differenceFrom;\n    farmShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\");\n    farmShowAs.baseItem = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\").items.getItem(\"A Farms\");\n    farmDataHierarchy.showAs = farmShowAs;\n\n    let wholesaleShowAs = wholesaleDataHierarchy.showAs;\n    wholesaleShowAs.calculation = Excel.ShowAsCalculation.differenceFrom;\n    wholesaleShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\");\n    wholesaleShowAs.baseItem = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\").items.getItem(\"A Farms\");\n    wholesaleDataHierarchy.showAs = wholesaleShowAs;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.ShowAsRule.calculation
   summary: >-
     要用于数据透视字段 ShowAs 计算。 有关详细信息，请参阅 Excel.ShowAsCalculation。
