commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.showasrule.yml
+++ b/docs/docs-ref-autogen/excel/excel.showasrule.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3ed202b6ea7cd7518dc02eae53d215411614d1b5
-ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
+ms.openlocfilehash: 34c0a1d4e587bad963f6869851dc1be67d38fad8
+ms.sourcegitcommit: 9034a7d2fb2934046178915d4305b0f0cf8f7934
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "25591167"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "25798206"
 items:
 - uid: excel.Excel.ShowAsRule
-  summary: '<span data-ttu-id="77e32-101">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77e32-101">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="eeef7-101">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eeef7-101">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.ShowAsRule
   fullName: excel.Excel.ShowAsRule
   langs:
@@ -20,10 +20,10 @@ items:
   - excel.Excel.ShowAsRule.calculation
 - uid: excel.Excel.ShowAsRule.baseField
   summary: >-
-    <span data-ttu-id="77e32-102">基本透视字段中，如果适用，则基于 ShowAs 计算，基于 else null ShowAsCalculation 类型。</span><span class="sxs-lookup"><span data-stu-id="77e32-102">The Base PivotField to base the ShowAs calculation, if applicable based on the ShowAsCalculation type, else null.</span></span>
+    <span data-ttu-id="eeef7-102">基本透视字段中，如果适用，则基于 ShowAs 计算，基于 else null ShowAsCalculation 类型。</span><span class="sxs-lookup"><span data-stu-id="eeef7-102">The Base PivotField to base the ShowAs calculation, if applicable based on the ShowAsCalculation type, else null.</span></span>
 
 
-    <span data-ttu-id="77e32-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77e32-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="eeef7-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eeef7-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: baseField
   fullName: excel.Excel.ShowAsRule.baseField
   langs:
@@ -36,10 +36,10 @@ items:
       - excel.Excel.PivotField
 - uid: excel.Excel.ShowAsRule.baseItem
   summary: >-
-    <span data-ttu-id="77e32-104">基本的项，如果适用，基于 ShowAs 计算基于 else null ShowAsCalculation 类型。</span><span class="sxs-lookup"><span data-stu-id="77e32-104">The Base Item to base the ShowAs calculation on, if applicable based on the ShowAsCalculation type, else null.</span></span>
+    <span data-ttu-id="eeef7-104">基本的项，如果适用，基于 ShowAs 计算基于 else null ShowAsCalculation 类型。</span><span class="sxs-lookup"><span data-stu-id="eeef7-104">The Base Item to base the ShowAs calculation on, if applicable based on the ShowAsCalculation type, else null.</span></span>
 
 
-    <span data-ttu-id="77e32-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77e32-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="eeef7-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eeef7-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: baseItem
   fullName: excel.Excel.ShowAsRule.baseItem
   langs:
@@ -50,12 +50,13 @@ items:
     return:
       type:
       - excel.Excel.PivotItem
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"eeef7-106\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"eeef7-106\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const pivotTable = context.workbook.worksheets.getActiveWorksheet().pivotTables.getItem(\"Farm Sales\");\n    const farmDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold at Farm\");\n    const wholesaleDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold Wholesale\");\n\n    farmDataHierarchy.load(\"showAs\");\n    wholesaleDataHierarchy.load(\"showAs\");\n    await context.sync();\n\n    // show the difference between crate sales of the \"A Farms\" and the other farms\n    // this difference is both aggregated and shown for individual fruit types (where applicable)\n    let farmShowAs = farmDataHierarchy.showAs;\n    farmShowAs.calculation = Excel.ShowAsCalculation.differenceFrom;\n    farmShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\");\n    farmShowAs.baseItem = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\").items.getItem(\"A Farms\");\n    farmDataHierarchy.showAs = farmShowAs;\n\n    let wholesaleShowAs = wholesaleDataHierarchy.showAs;\n    wholesaleShowAs.calculation = Excel.ShowAsCalculation.differenceFrom;\n    wholesaleShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\");\n    wholesaleShowAs.baseItem = pivotTable.rowHierarchies.getItem(\"Farm\").fields.getItem(\"Farm\").items.getItem(\"A Farms\");\n    wholesaleDataHierarchy.showAs = wholesaleShowAs;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.ShowAsRule.calculation
   summary: >-
-    <span data-ttu-id="77e32-106">要用于数据透视字段 ShowAs 计算。</span><span class="sxs-lookup"><span data-stu-id="77e32-106">The ShowAs Calculation to use for the Data PivotField.</span></span> <span data-ttu-id="77e32-107">有关详细信息，请参阅 Excel.ShowAsCalculation。</span><span class="sxs-lookup"><span data-stu-id="77e32-107">See Excel.ShowAsCalculation for Details.</span></span>
+    <span data-ttu-id="eeef7-107">要用于数据透视字段 ShowAs 计算。</span><span class="sxs-lookup"><span data-stu-id="eeef7-107">The ShowAs Calculation to use for the Data PivotField.</span></span> <span data-ttu-id="eeef7-108">有关详细信息，请参阅 Excel.ShowAsCalculation。</span><span class="sxs-lookup"><span data-stu-id="eeef7-108">See Excel.ShowAsCalculation for Details.</span></span>
 
 
-    <span data-ttu-id="77e32-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="77e32-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="eeef7-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="eeef7-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: calculation
   fullName: excel.Excel.ShowAsRule.calculation
   langs:
