--- a/docs/docs-ref-autogen/excel/excel.datapivothierarchy.yml
+++ b/docs/docs-ref-autogen/excel/excel.datapivothierarchy.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 244004941c09afb7cb249673ea523fbdc43c846e
-ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
+ms.openlocfilehash: 351e3ec0da8710d2c66819a1d2b7845fc7b36dcd
+ms.sourcegitcommit: 9034a7d2fb2934046178915d4305b0f0cf8f7934
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "25582326"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "25798172"
 items:
 - uid: excel.Excel.DataPivotHierarchy
   summary: >-
-    <span data-ttu-id="cc2b0-101">代表 Excel DataPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-101">Represents the Excel DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-101">代表 Excel DataPivotHierarchy。</span><span class="sxs-lookup"><span data-stu-id="19835-101">Represents the Excel DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.DataPivotHierarchy
   fullName: excel.Excel.DataPivotHierarchy
   langs:
@@ -33,10 +33,10 @@ items:
   - excel.Excel.DataPivotHierarchy.toJSON
 - uid: excel.Excel.DataPivotHierarchy.field
   summary: >-
-    <span data-ttu-id="cc2b0-103">返回与 DataPivotHierarchy 关联的数据透视。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-103">Returns the PivotFields associated with the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-103">返回与 DataPivotHierarchy 关联的数据透视。</span><span class="sxs-lookup"><span data-stu-id="19835-103">Returns the PivotFields associated with the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: field
   fullName: excel.Excel.DataPivotHierarchy.field
   langs:
@@ -49,10 +49,10 @@ items:
       - excel.Excel.PivotField
 - uid: excel.Excel.DataPivotHierarchy.id
   summary: >-
-    <span data-ttu-id="cc2b0-105">DataPivotHierarchy 的 id。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-105">Id of the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-105">DataPivotHierarchy 的 id。</span><span class="sxs-lookup"><span data-stu-id="19835-105">Id of the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: id
   fullName: excel.Excel.DataPivotHierarchy.id
   langs:
@@ -64,15 +64,15 @@ items:
       type:
       - string
 - uid: excel.Excel.DataPivotHierarchy.load
-  summary: <span data-ttu-id="cc2b0-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="cc2b0-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-108">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="19835-107">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="19835-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="19835-108">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="19835-108">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="cc2b0-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="cc2b0-109">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="19835-109">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="19835-109">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="cc2b0-110">`load(option?: { select?: string; expand?: string; }): Excel.DataPivotHierarchy`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-110">`load(option?: { select?: string; expand?: string; }): Excel.DataPivotHierarchy` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="19835-110">`load(option?: { select?: string; expand?: string; }): Excel.DataPivotHierarchy`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="19835-110">`load(option?: { select?: string; expand?: string; }): Excel.DataPivotHierarchy` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="cc2b0-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataPivotHierarchy`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataPivotHierarchy` - Only available on collection types.</span></span> <span data-ttu-id="cc2b0-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="cc2b0-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="cc2b0-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="cc2b0-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="19835-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataPivotHierarchy`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="19835-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.DataPivotHierarchy` - Only available on collection types.</span></span> <span data-ttu-id="19835-112">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="19835-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="19835-113">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="19835-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="19835-114">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="19835-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="19835-115">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="19835-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: excel.Excel.DataPivotHierarchy.load
   langs:
@@ -86,15 +86,15 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="cc2b0-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="19835-116">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="19835-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.DataPivotHierarchy.name
   summary: >-
-    <span data-ttu-id="cc2b0-117">DataPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-117">Name of the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-117">DataPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="19835-117">Name of the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: name
   fullName: excel.Excel.DataPivotHierarchy.name
   langs:
@@ -105,12 +105,13 @@ items:
     return:
       type:
       - string
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"19835-119\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"19835-119\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const dataHierarchies = context.workbook.worksheets.getActiveWorksheet().pivotTables.getItem(\"Farm Sales\").dataHierarchies\n    dataHierarchies.load(\"no-properties-needed\");\n    await context.sync();\n\n    dataHierarchies.items[0].name = \"Farm Sales\";\n    dataHierarchies.items[1].name = \"Wholesale\";\n    await context.sync();\n});\n```"
 - uid: excel.Excel.DataPivotHierarchy.numberFormat
   summary: >-
-    <span data-ttu-id="cc2b0-119">DataPivotHierarchy 数字格式。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-119">Number format of the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-120">DataPivotHierarchy 数字格式。</span><span class="sxs-lookup"><span data-stu-id="19835-120">Number format of the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-120">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-121">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-121">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: numberFormat
   fullName: excel.Excel.DataPivotHierarchy.numberFormat
   langs:
@@ -123,10 +124,10 @@ items:
       - string
 - uid: excel.Excel.DataPivotHierarchy.position
   summary: >-
-    <span data-ttu-id="cc2b0-121">DataPivotHierarchy 位置。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-121">Position of the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-122">DataPivotHierarchy 位置。</span><span class="sxs-lookup"><span data-stu-id="19835-122">Position of the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-122">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-122">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-123">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-123">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: position
   fullName: excel.Excel.DataPivotHierarchy.position
   langs:
@@ -139,10 +140,10 @@ items:
       - number
 - uid: excel.Excel.DataPivotHierarchy.setToDefault
   summary: >-
-    <span data-ttu-id="cc2b0-123">DataPivotHierarchy 重置为其默认值。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-123">Reset the DataPivotHierarchy back to its default values.</span></span>
+    <span data-ttu-id="19835-124">DataPivotHierarchy 重置为其默认值。</span><span class="sxs-lookup"><span data-stu-id="19835-124">Reset the DataPivotHierarchy back to its default values.</span></span>
 
 
-    <span data-ttu-id="cc2b0-124">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-124">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-125">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-125">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: setToDefault()
   fullName: excel.Excel.DataPivotHierarchy.setToDefault
   langs:
@@ -156,10 +157,10 @@ items:
       description: ''
 - uid: excel.Excel.DataPivotHierarchy.showAs
   summary: >-
-    <span data-ttu-id="cc2b0-125">确定数据是否应为特定的汇总计算或不 sown。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-125">Determines whether the data should be sown as a specific summary calculation or not.</span></span>
+    <span data-ttu-id="19835-126">确定数据是否应为特定的汇总计算或不 sown。</span><span class="sxs-lookup"><span data-stu-id="19835-126">Determines whether the data should be sown as a specific summary calculation or not.</span></span>
 
 
-    <span data-ttu-id="cc2b0-126">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-126">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-127">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-127">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: showAs
   fullName: excel.Excel.DataPivotHierarchy.showAs
   langs:
@@ -170,12 +171,13 @@ items:
     return:
       type:
       - excel.Excel.ShowAsRule
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"19835-128\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"19835-128\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const pivotTable = context.workbook.worksheets.getActiveWorksheet().pivotTables.getItem(\"Farm Sales\");\n    const farmDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold at Farm\");        \n    const wholesaleDataHierarchy: Excel.DataPivotHierarchy = pivotTable.dataHierarchies.getItem(\"Sum of Crates Sold Wholesale\");\n\n    farmDataHierarchy.load(\"showAs\");\n    wholesaleDataHierarchy.load(\"showAs\");\n    await context.sync();\n\n    // show the crates of each fruit type sold at the farm as a percentage of the column's total\n    let farmShowAs = farmDataHierarchy.showAs;\n    farmShowAs.calculation = Excel.ShowAsCalculation.percentOfColumnTotal;\n    farmShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Type\").fields.getItem(\"Type\");\n    farmDataHierarchy.showAs = farmShowAs;\n\n    let wholesaleShowAs = wholesaleDataHierarchy.showAs;\n    wholesaleShowAs.calculation = Excel.ShowAsCalculation.percentOfColumnTotal;\n    wholesaleShowAs.baseField = pivotTable.rowHierarchies.getItem(\"Type\").fields.getItem(\"Type\");\n    wholesaleDataHierarchy.showAs = wholesaleShowAs;\n    await context.sync();\n});\n```"
 - uid: excel.Excel.DataPivotHierarchy.summarizeBy
   summary: >-
-    <span data-ttu-id="cc2b0-127">确定是否显示 DataPivotHierarchy 的所有项目。</span><span class="sxs-lookup"><span data-stu-id="cc2b0-127">Determines whether to show all items of the DataPivotHierarchy.</span></span>
+    <span data-ttu-id="19835-129">确定是否显示 DataPivotHierarchy 的所有项目。</span><span class="sxs-lookup"><span data-stu-id="19835-129">Determines whether to show all items of the DataPivotHierarchy.</span></span>
 
 
-    <span data-ttu-id="cc2b0-128">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cc2b0-128">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="19835-130">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19835-130">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: summarizeBy
   fullName: excel.Excel.DataPivotHierarchy.summarizeBy
   langs:
