--- a/docs/docs-ref-autogen/excel/excel.pivottablecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.pivottablecollection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: febeb98fb73d27eb509d744fb17e7249ea541090
-ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
+ms.openlocfilehash: c4bc8273a7ef3fcd2748cc5eefc8815e6237429a
+ms.sourcegitcommit: 9034a7d2fb2934046178915d4305b0f0cf8f7934
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "25591405"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "25798185"
 items:
 - uid: excel.Excel.PivotTableCollection
   summary: >-
-    <span data-ttu-id="c7dea-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="c7dea-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+    <span data-ttu-id="9801e-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9801e-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
 
 
-    <span data-ttu-id="c7dea-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.PivotTableCollection
   fullName: excel.Excel.PivotTableCollection
   langs:
@@ -31,10 +31,10 @@ items:
   - excel.Excel.PivotTableCollection.toJSON
 - uid: excel.Excel.PivotTableCollection.add
   summary: >-
-    <span data-ttu-id="c7dea-103">添加数据透视表基于指定的源数据并将其插入目标区域左上角单元格。</span><span class="sxs-lookup"><span data-stu-id="c7dea-103">Add a Pivottable based on the specified source data and insert it at the top left cell of the destination range.</span></span>
+    <span data-ttu-id="9801e-103">添加数据透视表基于指定的源数据并将其插入目标区域左上角单元格。</span><span class="sxs-lookup"><span data-stu-id="9801e-103">Add a Pivottable based on the specified source data and insert it at the top left cell of the destination range.</span></span>
 
 
-    <span data-ttu-id="c7dea-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: add(name, source, destination)
   fullName: excel.Excel.PivotTableCollection.add
   langs:
@@ -45,26 +45,42 @@ items:
     return:
       type:
       - excel.Excel.PivotTable
-      description: <span data-ttu-id="c7dea-105">返回新插入的数据透视表。</span><span class="sxs-lookup"><span data-stu-id="c7dea-105">Returns the newly inserted PivotTable.</span></span>
+      description: >-
+        <span data-ttu-id="9801e-105">返回新插入的数据透视表。</span><span class="sxs-lookup"><span data-stu-id="9801e-105">Returns the newly inserted PivotTable.</span></span>
+
+        #### <a name="examples"></a><span data-ttu-id="9801e-106">示例</span><span class="sxs-lookup"><span data-stu-id="9801e-106">Examples</span></span>
+
+
+        ```typescript
+
+        await Excel.run(async (context) => {
+            const rangeToAnalyze = context.workbook.worksheets.getItem("Data").getRange("A1:E21");
+            const rangeToPlacePivot = context.workbook.worksheets.getItem("Pivot").getRange("A2");
+            context.workbook.worksheets.getItem("Pivot").pivotTables.add("Farm Sales", rangeToAnalyze, rangeToPlacePivot);
+
+            await context.sync();
+        });
+
+        ```
     parameters:
     - id: name
-      description: <span data-ttu-id="c7dea-106">新数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="c7dea-106">The name of the new PivotTable.</span></span>
+      description: <span data-ttu-id="9801e-107">新数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="9801e-107">The name of the new PivotTable.</span></span>
       type:
       - string
     - id: source
-      description: <span data-ttu-id="c7dea-107">新数据透视表的源数据，这可以是范围 （也包括工作表名称的字符串地址） 或表。</span><span class="sxs-lookup"><span data-stu-id="c7dea-107">The source data for the new PivotTable, this can either be a range (or string address including the worksheet name) or a table.</span></span>
+      description: <span data-ttu-id="9801e-108">新数据透视表的源数据，这可以是范围 （也包括工作表名称的字符串地址） 或表。</span><span class="sxs-lookup"><span data-stu-id="9801e-108">The source data for the new PivotTable, this can either be a range (or string address including the worksheet name) or a table.</span></span>
       type:
       - Range | string | Table
     - id: destination
-      description: <span data-ttu-id="c7dea-108">在数据透视表报表的目标区域 （生成的报表的放置位置工作表上的区域） 的左上角单元格。</span><span class="sxs-lookup"><span data-stu-id="c7dea-108">The cell in the upper-left corner of the PivotTable report's destination range (the range on the worksheet where the resulting report will be placed).</span></span>
+      description: <span data-ttu-id="9801e-109">在数据透视表报表的目标区域 （生成的报表的放置位置工作表上的区域） 的左上角单元格。</span><span class="sxs-lookup"><span data-stu-id="9801e-109">The cell in the upper-left corner of the PivotTable report's destination range (the range on the worksheet where the resulting report will be placed).</span></span>
       type:
       - Range | string
 - uid: excel.Excel.PivotTableCollection.getCount
   summary: >-
-    <span data-ttu-id="c7dea-109">获取集合中的数据透视表的数量。</span><span class="sxs-lookup"><span data-stu-id="c7dea-109">Gets the number of pivot tables in the collection.</span></span>
+    <span data-ttu-id="9801e-110">获取集合中的数据透视表的数量。</span><span class="sxs-lookup"><span data-stu-id="9801e-110">Gets the number of pivot tables in the collection.</span></span>
 
 
-    <span data-ttu-id="c7dea-110">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-110">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-111">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-111">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getCount()
   fullName: excel.Excel.PivotTableCollection.getCount
   langs:
@@ -78,10 +94,10 @@ items:
       description: ''
 - uid: excel.Excel.PivotTableCollection.getItem
   summary: >-
-    <span data-ttu-id="c7dea-111">按名称获取 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="c7dea-111">Gets a PivotTable by name.</span></span>
+    <span data-ttu-id="9801e-112">按名称获取 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="9801e-112">Gets a PivotTable by name.</span></span>
 
 
-    <span data-ttu-id="c7dea-112">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-112">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-113">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getItem(name)
   fullName: excel.Excel.PivotTableCollection.getItem
   langs:
@@ -95,15 +111,15 @@ items:
       description: ''
     parameters:
     - id: name
-      description: <span data-ttu-id="c7dea-113">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="c7dea-113">Name of the PivotTable to be retrieved.</span></span>
+      description: <span data-ttu-id="9801e-114">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="9801e-114">Name of the PivotTable to be retrieved.</span></span>
       type:
       - string
 - uid: excel.Excel.PivotTableCollection.getItemOrNullObject
   summary: >-
-    <span data-ttu-id="c7dea-p101">按 PivotTable 对象的名称获取此对象。如果没有 PivotTable 对象，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="c7dea-p101">Gets a PivotTable by name. If the PivotTable does not exist, will return a null object.</span></span>
+    <span data-ttu-id="9801e-p101">按 PivotTable 对象的名称获取此对象。如果没有 PivotTable 对象，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="9801e-p101">Gets a PivotTable by name. If the PivotTable does not exist, will return a null object.</span></span>
 
 
-    <span data-ttu-id="c7dea-116">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-116">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-117">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-117">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getItemOrNullObject(name)
   fullName: excel.Excel.PivotTableCollection.getItemOrNullObject
   langs:
@@ -117,11 +133,11 @@ items:
       description: ''
     parameters:
     - id: name
-      description: <span data-ttu-id="c7dea-117">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="c7dea-117">Name of the PivotTable to be retrieved.</span></span>
+      description: <span data-ttu-id="9801e-118">要检索的数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="9801e-118">Name of the PivotTable to be retrieved.</span></span>
       type:
       - string
 - uid: excel.Excel.PivotTableCollection.items
-  summary: <span data-ttu-id="c7dea-118">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="c7dea-118">Gets the loaded child items in this collection.</span></span>
+  summary: <span data-ttu-id="9801e-119">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="9801e-119">Gets the loaded child items in this collection.</span></span>
   name: items
   fullName: excel.Excel.PivotTableCollection.items
   langs:
@@ -133,15 +149,15 @@ items:
       type:
       - Excel.PivotTable[]
 - uid: excel.Excel.PivotTableCollection.load
-  summary: <span data-ttu-id="c7dea-119">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="c7dea-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="c7dea-120">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="c7dea-120">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="9801e-120">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="9801e-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9801e-121">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="9801e-121">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="c7dea-121">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="c7dea-121">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="9801e-122">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="9801e-122">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="c7dea-122">`load(option?: { select?: string; expand?: string; }): Excel.PivotTableCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="c7dea-122">`load(option?: { select?: string; expand?: string; }): Excel.PivotTableCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="9801e-123">`load(option?: { select?: string; expand?: string; }): Excel.PivotTableCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="9801e-123">`load(option?: { select?: string; expand?: string; }): Excel.PivotTableCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="c7dea-123">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotTableCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="c7dea-123">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotTableCollection` - Only available on collection types.</span></span> <span data-ttu-id="c7dea-124">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="c7dea-124">It is similar to the preceding signature.</span></span> <span data-ttu-id="c7dea-125">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="c7dea-125">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="c7dea-126">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="c7dea-126">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="c7dea-127">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="c7dea-127">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="9801e-124">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotTableCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="9801e-124">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.PivotTableCollection` - Only available on collection types.</span></span> <span data-ttu-id="9801e-125">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="9801e-125">It is similar to the preceding signature.</span></span> <span data-ttu-id="9801e-126">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="9801e-126">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="9801e-127">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="9801e-127">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="9801e-128">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="9801e-128">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: excel.Excel.PivotTableCollection.load
   langs:
@@ -155,15 +171,15 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="c7dea-128">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="c7dea-128">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="9801e-129">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="9801e-129">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.PivotTableCollection.refreshAll
   summary: >-
-    <span data-ttu-id="c7dea-129">刷新集合中的所有数据透视表。</span><span class="sxs-lookup"><span data-stu-id="c7dea-129">Refreshes all the pivot tables in the collection.</span></span>
+    <span data-ttu-id="9801e-130">刷新集合中的所有数据透视表。</span><span class="sxs-lookup"><span data-stu-id="9801e-130">Refreshes all the pivot tables in the collection.</span></span>
 
 
-    <span data-ttu-id="c7dea-130">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7dea-130">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="9801e-131">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9801e-131">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: refreshAll()
   fullName: excel.Excel.PivotTableCollection.refreshAll
   langs:
