--- a/docs/docs-ref-autogen/excel/excel.runtime.yml
+++ b/docs/docs-ref-autogen/excel/excel.runtime.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 29eacb45ae099bdaf10a0707c3f018a3d91463bd
-ms.sourcegitcommit: c1149d24b38f20daf9ce690cd0761ec1ceb7333d
+ms.openlocfilehash: b071627023bc3785cba01289ff25992fc916df39
+ms.sourcegitcommit: 9034a7d2fb2934046178915d4305b0f0cf8f7934
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "25584041"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "25798213"
 items:
 - uid: excel.Excel.Runtime
   summary: >-
-    <span data-ttu-id="abed4-101">表示 Excel 运行时类。</span><span class="sxs-lookup"><span data-stu-id="abed4-101">Represents the Excel Runtime class.</span></span>
+    <span data-ttu-id="99044-101">表示 Excel 运行时类。</span><span class="sxs-lookup"><span data-stu-id="99044-101">Represents the Excel Runtime class.</span></span>
 
 
-    <span data-ttu-id="abed4-102">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="abed4-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99044-102">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99044-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.Runtime
   fullName: excel.Excel.Runtime
   langs:
@@ -26,10 +26,10 @@ items:
   - excel.Excel.Runtime.toJSON
 - uid: excel.Excel.Runtime.enableEvents
   summary: >-
-    <span data-ttu-id="abed4-103">当前任务窗格或内容加载项中启用开/关 JavaScript 事件。</span><span class="sxs-lookup"><span data-stu-id="abed4-103">Turn on/off JavaScript events in current taskpane or content add-in.</span></span>
+    <span data-ttu-id="99044-103">当前任务窗格或内容加载项中启用开/关 JavaScript 事件。</span><span class="sxs-lookup"><span data-stu-id="99044-103">Turn on/off JavaScript events in current taskpane or content add-in.</span></span>
 
 
-    <span data-ttu-id="abed4-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="abed4-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="99044-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99044-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: enableEvents
   fullName: excel.Excel.Runtime.enableEvents
   langs:
@@ -40,16 +40,17 @@ items:
     return:
       type:
       - boolean
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"99044-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"99044-105\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    context.runtime.load(\"enableEvents\");\n    await context.sync();\n\n    // check if events are enabled and toggle accordingly\n    const eventBoolean = !context.runtime.enableEvents\n    context.runtime.enableEvents = eventBoolean;\n    if (eventBoolean) {\n        console.log(\"Events are currently on.\");\n    } else {\n        console.log(\"Events are currently off.\");\n    }\n    await context.sync();\n});\n```"
 - uid: excel.Excel.Runtime.load
-  summary: <span data-ttu-id="abed4-105">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="abed4-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="abed4-106">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="abed4-106">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="99044-106">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="99044-106">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="99044-107">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="99044-107">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="abed4-107">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="abed4-107">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="99044-108">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="99044-108">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="abed4-108">`load(option?: { select?: string; expand?: string; }): Excel.Runtime`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="abed4-108">`load(option?: { select?: string; expand?: string; }): Excel.Runtime` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="99044-109">`load(option?: { select?: string; expand?: string; }): Excel.Runtime`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="99044-109">`load(option?: { select?: string; expand?: string; }): Excel.Runtime` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="abed4-109">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Runtime`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="abed4-109">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Runtime` - Only available on collection types.</span></span> <span data-ttu-id="abed4-110">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="abed4-110">It is similar to the preceding signature.</span></span> <span data-ttu-id="abed4-111">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="abed4-111">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="abed4-112">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="abed4-112">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="abed4-113">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="abed4-113">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="99044-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Runtime`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="99044-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Runtime` - Only available on collection types.</span></span> <span data-ttu-id="99044-111">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="99044-111">It is similar to the preceding signature.</span></span> <span data-ttu-id="99044-112">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="99044-112">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="99044-113">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="99044-113">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="99044-114">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="99044-114">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   name: load(option)
   fullName: excel.Excel.Runtime.load
   langs:
@@ -63,7 +64,7 @@ items:
       description: ''
     parameters:
     - id: option
-      description: <span data-ttu-id="abed4-114">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="abed4-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="99044-115">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="99044-115">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.Runtime.toJSON
