--- a/docs/docs-ref-autogen/excel/excel.table.yml
+++ b/docs/docs-ref-autogen/excel/excel.table.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8277f5b33dd5b812043cf6868d44f8fbb1ee681c
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: b7b2315c6495f74460c3b1156dbdde9f0f45b6ca
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298405"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645941"
 items:
 - uid: excel.Excel.Table
   summary: >-
@@ -299,7 +299,7 @@ items:
     return:
       type:
       - OfficeExtension.EventHandlers<Excel.TableChangedEventArgs>
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    let table = context.workbook.tables.getItemAt(0);\n    table.onChanged.add(onChange);\n\n    await context.sync();\n\n    OfficeHelpers.UI.notify(\"A handler has been registered for the onChanged event\",\n        \"Try changing a cell value in the table, and watch the console output.\");\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    let table = context.workbook.tables.getItemAt(0);\n    table.onChanged.add(onChange);\n\n    await context.sync();\n    console.log(\"A handler has been registered for the onChanged event\");\n});\n```"
 - uid: excel.Excel.Table.onSelectionChanged
   summary: >-
     在特定的表上的选定内容更改时发生。
@@ -316,7 +316,7 @@ items:
     return:
       type:
       - OfficeExtension.EventHandlers<Excel.TableSelectionChangedEventArgs>
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    let table = context.workbook.tables.getItemAt(0);\n    table.onSelectionChanged.add(onSelectionChange);\n\n    await context.sync();\n\n    OfficeHelpers.UI.notify(\"A handler has been registered for table onSelectionChanged event\",\n        \"Try changing a range selection in the table, and watch the console output.\");\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    let table = context.workbook.tables.getItemAt(0);\n    table.onSelectionChanged.add(onSelectionChange);\n\n    await context.sync();\n    console.log(\"A handler has been registered for table onSelectionChanged event\");\n});\n```"
 - uid: excel.Excel.Table.reapplyFilters
   summary: >-
     重新应用当前表上的所有筛选器。
