--- a/docs/docs-ref-autogen/office/office.customxmlpart.yml
+++ b/docs/docs-ref-autogen/office/office.customxmlpart.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b6c06843521e065773870869f7b83148a82db32c
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: fdb1be403f1725c9ef5e06ccf23e957801014655
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26297957"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647068"
 items:
 - uid: office.Office.CustomXmlPart
   summary: 代表[Office.CustomXmlParts](xref:office.Office.CustomXmlParts)集合中的单个 CustomXMLPart。
@@ -21,7 +21,7 @@ items:
     有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。
 
 
-    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
+    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> Office for Mac? </th></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
   name: Office.CustomXmlPart
   fullName: Office.CustomXmlPart
   langs:
