--- a/docs/docs-ref-autogen/outlook_1_3/office.entities.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.entities.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11e7e34d8fc1be78221dc9ae7a68fb45ef6b8347
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 466814c7abcb8674a27afa000b25ba1fc28d57c2
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26224914"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26648374"
 items:
 - uid: Outlook_1_3.Office.Entities
   summary: >-
@@ -34,7 +34,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.Entities
   fullName: Office.Entities
   langs:
