--- a/docs/docs-ref-autogen/excel/excel.chartaxis.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartaxis.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c4fdc68aa26bd64a9e15de95f1a887e6ef6b908f
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 4058f0935327daac222aba29584a9a0e16367310
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26223878"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646291"
 items:
 - uid: excel.Excel.ChartAxis
   summary: >-
@@ -160,7 +160,7 @@ items:
     return:
       type:
       - Excel.ChartAxisDisplayUnit | "None" | "Hundreds" | "Thousands" | "TenThousands" | "HundredThousands" | "Millions" | "TenMillions" | "HundredMillions" | "Billions" | "Trillions" | "Custom"
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let chart = sheet.charts.getItemAt(0);\n    let categoryAxis = chart.axes.categoryAxis;\n    let valueAxis = chart.axes.valueAxis;\n\n    // Load to get display unit.\n    valueAxis.load(\"displayUnit\");\n   \n    await context.sync();\n\n    OfficeHelpers.UI.notify(\"The vertical axis display unit is: \" +  valueAxis.displayUnit);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let chart = sheet.charts.getItemAt(0);\n    let categoryAxis = chart.axes.categoryAxis;\n    let valueAxis = chart.axes.valueAxis;\n\n    // Load to get display unit.\n    valueAxis.load(\"displayUnit\");\n\n    await context.sync();\n\n    console.log(\"The vertical axis display unit is: \" + valueAxis.displayUnit);\n});\n```"
 - uid: excel.Excel.ChartAxis.format
   summary: >-
     表示 chart 对象的格式，包括线条和字体格式。只读。
@@ -614,7 +614,7 @@ items:
     return:
       type:
       - boolean
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let chart = sheet.charts.getItemAt(0);\n    let axis = chart.axes.valueAxis;\n\n    // Remove display unit.\n    axis.showDisplayUnitLabel = false;\n\n    await context.sync();\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    let chart = sheet.charts.getItemAt(0);\n    let axis = chart.axes.valueAxis;\n\n    // Remove display unit.\n    axis.showDisplayUnitLabel = false;\n\n    await context.sync();\n});\n```"
 - uid: excel.Excel.ChartAxis.textOrientation
   summary: >-
     代表坐标轴刻度线标签的文本方向。 值应为整数从-90 至 90 或 180 纵向文本。
