--- a/docs/docs-ref-autogen/office/office.customxmlnode.yml
+++ b/docs/docs-ref-autogen/office/office.customxmlnode.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 20bc98c2a19e73ae2ddbcbacff8904d349292e04
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: db98f3f5b4e39d5b5662233c54ff302901f90fcb
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298076"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647194"
 items:
 - uid: office.Office.CustomXmlNode
   summary: 表示文档中的树中的 XML 节点。
@@ -21,7 +21,7 @@ items:
     有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。
 
 
-    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
+    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th><th> Office for Mac? </th></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
   name: Office.CustomXmlNode
   fullName: Office.CustomXmlNode
   langs:
