--- a/docs/docs-ref-autogen/office/office.eventtype.yml
+++ b/docs/docs-ref-autogen/office/office.eventtype.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3ee96b6be3caa117e8f35817db527b38a904574b
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 189567c4cd69104e81241f7f8fe611d520ee258f
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298069"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26648762"
 items:
 - uid: office.Office.EventType
   summary: >-
@@ -167,10 +167,10 @@ items:
   type: field
 - uid: office.Office.EventType.ItemChanged
   summary: >-
-    所选的 Outlook 项目发生更改时的触发器。
+    触发器查看固定任务窗格时选择不同的 Outlook 项目时。
 
 
-    \[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+    \[[API 集： 邮箱 1.5](/office/dev/add-ins/reference/javascript-api-for-office)\]
   name: ItemChanged
   fullName: ItemChanged
   langs:
