--- a/docs/docs-ref-autogen/outlook_1_1/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.attachmentdetails.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3b15404b761324ffed9bc3ea89b9279792c3c2cd
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: b4d908362d9efe25223bb0d79161c2833b5d55f0
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235635"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647460"
 items:
 - uid: Outlook_1_1.Office.AttachmentDetails
   summary: >-
@@ -19,7 +19,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.AttachmentDetails
   fullName: Office.AttachmentDetails
   langs:
