--- a/docs/docs-ref-autogen/outlook_1_2/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.body.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9142b4961c5182c54cd71def1f8ccbea58563387
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 38e39161e6433efff18cc461562146163ba11099
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26234497"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647852"
 items:
 - uid: Outlook_1_2.Office.Body
   summary: >-
@@ -77,7 +77,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -133,7 +133,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
