--- a/docs/docs-ref-autogen/outlook_1_2/office.meetingsuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.meetingsuggestion.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d69bb9a68ba28dc4245a403a9dbfc472857bdbfd
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: bff92b6bfeb37e32124f03c8b41eaa21c5ff19bf
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26236177"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26647586"
 items:
 - uid: Outlook_1_2.Office.MeetingSuggestion
   summary: >-
@@ -22,7 +22,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.MeetingSuggestion
   fullName: Office.MeetingSuggestion
   langs:
