--- a/docs/docs-ref-autogen/outlook_1_4/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.emailuser.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8d2cace97e788c77e9555d0bd845ada2ec27ed2b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d8a13dfdd7669309af4a54b9e6389ab5bcbdfd40
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26229741"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645836"
 items:
 - uid: Outlook_1_4.Office.EmailUser
   summary: >-
@@ -16,7 +16,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.EmailUser
   fullName: Office.EmailUser
   langs:
