--- a/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 504ba1fbbb7ade68bb258a7662f24d861c1f6bb7
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 85bb89e59f26fa6e36aeb08a90341bc17704d632
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26221596"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26645416"
 items:
 - uid: Outlook_1_5.Office.LocalClientTime
   summary: >-
@@ -16,7 +16,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.LocalClientTime
   fullName: Office.LocalClientTime
   langs:
