--- a/docs/docs-ref-autogen/outlook_1_7/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.emailuser.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 28cfaf7771aa4ee58ded98b7c945e5f98694d45b
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: d4652da19babd488de30681fabd6490cabef7b83
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235736"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26646732"
 items:
 - uid: Outlook_1_7.Office.EmailUser
   summary: >-
@@ -16,7 +16,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
   name: Office.EmailUser
   fullName: Office.EmailUser
   langs:
