--- a/docs/docs-ref-autogen/outlook_1_7/office.recurrence.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.recurrence.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c9bc5721e1579b5db8e350de2888eede034039e7
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 1ee5c41096cec835c19895d98da44a0bcc788357
+ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26226377"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "26648041"
 items:
 - uid: Outlook_1_7.Office.Recurrence
   summary: >-
@@ -22,7 +22,7 @@ items:
     **状态**
 
 
-    <table> <tr> <th>State</th> <th>可编辑？</th> <th>可查看？</th> </tr> <tr> <td>约会组织者的撰写系列</td> <td>是 (setAsync)</td> <td>是 (getAsync)</td> </tr> <tr> <td>约会组织者的撰写实例</td> <td>无 （setAsync 返回错误）</td> <td>是 (getAsync)</td> </tr> <tr> <td>约会 Attendee-读取系列</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>约会 Attendee-读取实例</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>会议请求-读取系列</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>会议请求-读取实例</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> </table>
+    <table> <tr> <th>状态</th> <th>可编辑？</th> <th>可查看？</th> </tr> <tr> <td>约会组织者的撰写系列</td> <td>是 (setAsync)</td> <td>是 (getAsync)</td> </tr> <tr> <td>约会组织者的撰写实例</td> <td>无 （setAsync 返回错误）</td> <td>是 (getAsync)</td> </tr> <tr> <td>约会 Attendee-读取系列</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>约会 Attendee-读取实例</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>会议请求-读取系列</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> <tr> <td>会议请求-读取实例</td> <td>无 (setAsync 不可用)</td> <td>是 (item.recurrence)</td> </tr> </table>
   name: Office.Recurrence
   fullName: Office.Recurrence
   langs:
@@ -176,7 +176,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidEndTime-早于开始时间是约会结束时间。</td></tr></table>
+    <tr><td>错误</td><td>InvalidEndTime-早于开始时间是约会结束时间。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
